global language support

--- a/Hawk.Core/Themes/Theme.xaml
+++ b/Hawk.Core/Themes/Theme.xaml
@@ -10,10 +10,12 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   mc:Ignorable="d"
+        xmlns:themes="clr-namespace:Hawk.Core.Themes;assembly=Hawk.Core"
+       xmlns:mvvm="clr-namespace:Hawk.Core.Utils.MVVM;assembly=Hawk.Core"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
 
     <!-- Main Colors -->
-
+    <themes:MetroConverter x:Key="MetroConverter"/>
     <Color x:Key="MainColor">#FC595959</Color>
     <Color x:Key="HoverColor">#FF393939</Color>
     <Color x:Key="DefaultColor">#FF9BB1C5</Color>
@@ -658,7 +660,108 @@
             </Setter.Value>
         </Setter>
     </Style>
-	
+    <Style x:Key="miniButton"
+           TargetType="{x:Type Button}">
+
+        <Setter Property="Background"
+                Value="Transparent" />
+        <Setter Property="BorderThickness"
+                Value="2" />
+        <Setter Property="HorizontalContentAlignment"
+                Value="Center" />
+        <Setter Property="VerticalContentAlignment"
+                Value="Center" ></Setter>
+        <Setter Property="AllowDrop"
+                Value="True" />
+        <Setter Property="Padding"
+                Value="1" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid Width="20" Height="20" Margin="0">
+                        <Ellipse Fill="{TemplateBinding Background}"
+                			Margin="1"
+                			StrokeThickness="0" />
+                        <Ellipse x:Name="ellipsebg"
+                		
+                			Opacity="0"
+                			Margin="1"
+                			StrokeThickness="0" />
+                        <Ellipse x:Name="ellipse"
+                				Margin="1"
+                			Stroke="{TemplateBinding Foreground}"
+                			StrokeThickness="{Binding BorderThickness.Left, RelativeSource={x:Static RelativeSource.TemplatedParent}}" />
+                        <Viewbox Width="15" Height="15">
+                            <Rectangle Width="20" Height="20" x:Name="content"  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                			Margin="{TemplateBinding Padding}"
+                                        
+                			SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                			VerticalAlignment="{TemplateBinding VerticalContentAlignment}" >
+                                <Rectangle.Fill>
+                                    <VisualBrush Stretch="Fill" Visual="{Binding Icon, Converter={StaticResource MetroConverter}}" />
+                                </Rectangle.Fill>
+                            </Rectangle>
+                        </Viewbox>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsPressed"
+                                 Value="True">
+                            <Trigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="ellipsebg"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         From="0"
+                                                         To="0.3"
+                                                         Duration="0:0:0" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.EnterActions>
+                            <!-- some out fading -->
+                            <Trigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="ellipsebg"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         To="0"
+                                                         Duration="0:0:0.5" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.ExitActions>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver"
+                                 Value="True">
+                            <Setter TargetName="ellipse"
+                                    Property="Opacity"
+                                    Value="1" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver"
+                                 Value="False">
+                            <Setter TargetName="ellipse"
+                                    Property="Opacity"
+                                    Value=".5" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled"
+                                 Value="false">
+                            <Setter Property="Foreground"
+                                    Value="#ADADAD" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="mvvm:DropHelper.DropSupport" >
+            <Setter.Value>
+                <mvvm:DropSupportData BindingPath=""/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Height" Value="20"/>
+        <Setter Property="Width" Value="20"/>
+
+        <Setter Property="ToolTip" Value="{Binding Text}"/>
+        <Setter Property="Command" Value="{Binding}"/>
+        <Setter Property="Margin" Value="10,0,0,0"/>
+    </Style>
     <Style TargetType="{x:Type ScrollBar}">
         <Setter Property="Stylus.IsFlicksEnabled" Value="false" />
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
