--- a/Hawk.ETL.Controls/SmartETLUI.xaml
+++ b/Hawk.ETL.Controls/SmartETLUI.xaml
@@ -72,7 +72,7 @@
         </DataTemplate>
         <DataTemplate x:Key="DataTemplate2">
             <StackPanel Height="30" Width="140" d:DesignWidth="126.167" d:DesignHeight="39.987" Orientation="Horizontal">
-                <TextBlock Margin="2,0,8,0"  mvvm:ListBindingDoubleClick.Property="{Binding Data.Commands[0], Source={StaticResource BindingProxy}}"     TextWrapping="Wrap" Text="{Binding TypeName}" ToolTip="{Binding GroupName}" FontSize="14.667" Width="Auto" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <TextBlock Margin="2,0,8,0"  mvvm:ListBindingDoubleClick.Property="{Binding Data.Commands[0], Source={StaticResource BindingProxy}}"     TextWrapping="Wrap" Text="{Binding TypeName}"  FontSize="14.667" Width="Auto" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                 <CheckBox Content="" IsChecked="{Binding Enabled}"  VerticalAlignment="Center" HorizontalAlignment="Center" ToolTip="是否激活"/>
             </StackPanel>
         </DataTemplate>
@@ -96,7 +96,7 @@
                     <RowDefinition Height="0.256*"/>
                     <RowDefinition Height="0.744*"/>
                 </Grid.RowDefinitions>
-                <ListView x:FieldModifier="public"  ItemsSource="{Binding Documents}" x:Name="DataList" Margin="0,8.624,0,0" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="1"/>
+                <ListView x:FieldModifier="public"  ItemsSource="{Binding Documents}" x:Name="DataList" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="1"/>
                 <ListBox  x:FieldModifier="public" x:Name="ToolList" Margin="0,8,0,0" ItemsSource="{Binding Dict}"    ItemsPanel="{DynamicResource ItemsPanelTemplate1}" ItemTemplate="{DynamicResource DataTemplate1}" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled" VerticalContentAlignment="Stretch"/>
                 <GridSplitter HorizontalAlignment="Stretch" Height="5" VerticalAlignment="Bottom" ResizeDirection="Rows" Margin="0" d:LayoutOverrides="VerticalAlignment, GridBox"/>
 
