--- a/Hawk.ETL.Controls/TaskManagerView.xaml
+++ b/Hawk.ETL.Controls/TaskManagerView.xaml
@@ -1,7 +1,8 @@
-﻿<UserControl x:Class="Hawk.ETL.Controls.TaskManagerView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mvvm="clr-namespace:Hawk.Core.Utils.MVVM;assembly=Hawk.Core">
+             xmlns:mvvm="clr-namespace:Hawk.Core.Utils.MVVM;assembly=Hawk.Core" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="Hawk.ETL.Controls.TaskManagerView"
+             d:DesignWidth="363.5" d:DesignHeight="146">
 	<UserControl.Resources>
 		  <mvvm:BindingProxy x:Key="BindingProxy" Data="{Binding}"/>
         <Style    TargetType="{x:Type MenuItem}" BasedOn="{StaticResource {x:Type MenuItem}}">
@@ -17,19 +18,23 @@
 		</Style>
 	</UserControl.Resources>
     <Grid>
+    	<Grid.RowDefinitions>
+    		<RowDefinition Height="0.858*"/>
+    		<RowDefinition Height="18"/>
+    	</Grid.RowDefinitions>
     	<ListView   ItemsSource="{Binding CurrentProcessTasks}">
-    		<ListView.Resources>
-    			<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding BindingCommands.ChildActions[5].ChildActions}"/>
-
-    			<Style TargetType="{x:Type ListViewItem}"  BasedOn="{StaticResource {x:Type ListViewItem}}">
-    				<Setter Property="ContextMenu" Value="{StaticResource resourceContextMenu}" />
-                                       
-    			</Style>
-    		</ListView.Resources>
+    	
     		<ListView.View>
     			<GridView>
-    				<GridViewColumn Header="任务名称" DisplayMemberBinding="{Binding Name}" />
-    				<GridViewColumn Header="已启动" DisplayMemberBinding="{Binding IsStart}" />
+    				<GridViewColumn Header="选择">
+    					<GridViewColumn.CellTemplate>
+    						<DataTemplate>
+    							<CheckBox IsChecked="{Binding IsSelected}"/>	 
+    						</DataTemplate>
+    					</GridViewColumn.CellTemplate>
+    					<!--脑残的xaml-->        
+    				</GridViewColumn>
+    				<GridViewColumn Header="名称" DisplayMemberBinding="{Binding Name}" />
     				<GridViewColumn Header="百分比">
     					<GridViewColumn.CellTemplate>
     						<DataTemplate>
@@ -41,19 +46,26 @@
     					</GridViewColumn.CellTemplate>
     					<!--脑残的xaml-->        
     				</GridViewColumn>
-    				<GridViewColumn Header="是否暂停">
+    				<GridViewColumn Header="暂停">
     					<GridViewColumn.CellTemplate>
     						<DataTemplate>
-    							<CheckBox IsChecked="{Binding IsPause}"/>
-                                                	 
+    							<CheckBox IsChecked="{Binding IsPause}"/>	 
     						</DataTemplate>
     					</GridViewColumn.CellTemplate>
     					<!--脑残的xaml-->        
     				</GridViewColumn>
-    				<GridViewColumn Header="当前位置" DisplayMemberBinding="{Binding CurrentIndex}" />
+    				<GridViewColumn Header="位置" DisplayMemberBinding="{Binding CurrentIndex}" />
     			</GridView>
     		</ListView.View> 	           	 
     	</ListView>
+    	<StackPanel VerticalAlignment="Top"   DataContext="{Binding BindingCommands.ChildActions[2].ChildActions}"  HorizontalAlignment="Left" Orientation="Horizontal" Grid.Row="1">
+    		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
+    		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
+    		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
+    		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [3]}" />  	
+			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [4]}" />  	
+    	</StackPanel>
+    	 
             
     </Grid>
 </UserControl>
