一大堆改进

--- a/Hawk.ETL.Controls/DataViewers/AboutAuthor.xaml
+++ b/Hawk.ETL.Controls/DataViewers/AboutAuthor.xaml
@@ -12,9 +12,8 @@
             <TextBlock Text="如果你有任何问题和反馈，欢迎联系我：" Margin="29,73,160,278" FontSize="16"/>
             <TextBlock Text="buptzym@qq.com" Margin="29,108,160,243" FontSize="16" FontWeight="Bold"/>
             <TextBlock Margin="29,143,160,208" FontSize="16"><Run Text="欢迎关注微信公共号：《"/><Run FontWeight="Bold" Text="沙漠之鹰"/><Run Text="》"/></TextBlock>
-            <TextBlock Text="如果软件帮到了你，可以为开发者捐赠：" Margin="29,240,160,111" FontSize="16"/>
-           <Button Margin="8,289,0,1" Height="50" Width="100" Content="捐赠地址" Click="Button_Click" FontSize="20" VerticalAlignment="Top" HorizontalAlignment="Center"></Button>
-            <TextBlock Text="版本： 1.30" Margin="268,10,43,335" FontSize="24" FontWeight="Bold"/>
+            <TextBlock Text="如果软件帮到了你，可以为开发者捐赠" Margin="29,193,160,158" FontSize="16"/>
+            <TextBlock Text="版本： 1.50" Margin="268,10,43,335" FontSize="24" FontWeight="Bold"/>
         </Grid>
     </Grid>
 </UserControl>
