--- a/Hawk.ETL.Controls/SystemStateViewer.xaml
+++ b/Hawk.ETL.Controls/SystemStateViewer.xaml
@@ -93,7 +93,7 @@
     		<ColumnDefinition Width="0.511*"/>
     		<ColumnDefinition Width="0.489*"/>
     	</Grid.ColumnDefinitions>
-            <ListBox x:Name="processListBox" SelectedItem="{Binding SelectedProcess}" Margin="8,40.25,8,20" MouseMove="processListBox_MouseMove" DataContext="{Binding PluginDictionary[模块管理]}" ItemsSource="{Binding ProcessCollectionView}"  ItemTemplate="{DynamicResource DataTemplate2}"  >
+            <ListBox x:Name="processListBox" ToolTip="当前加载的所有算法模块" SelectedItem="{Binding SelectedProcess}" Margin="8,11,8,20" MouseMove="processListBox_MouseMove" DataContext="{Binding PluginDictionary[模块管理]}" ItemsSource="{Binding ProcessCollectionView}"  ItemTemplate="{DynamicResource DataTemplate2}"  >
             <ListBox.GroupStyle>
                 <GroupStyle ContainerStyle="{StaticResource GroupContainerStyle}">
                     <GroupStyle.HeaderTemplate>
@@ -119,14 +119,13 @@
             </ListBox.ContextMenu>         
 			</ListBox>
     	<GridSplitter Width="1" RenderTransformOrigin="0.5,0.5" Grid.Column="1" HorizontalAlignment="Left"/>
-    	<Button Margin="10.635,11.36,0,0"  Command="{Binding}"  DataContext="{Binding Commands[1]}" VerticalAlignment="Top" FontSize="13.333"  HorizontalAlignment="Left"><Run Language="zh-cn" Text="算法视图"/></Button>
-    	<StackPanel VerticalAlignment="Bottom"   DataContext="{Binding PluginDictionary[模块管理].BindingCommands.ChildActions[4].ChildActions}"  HorizontalAlignment="Right" Margin="0,0,20,0" Orientation="Horizontal">
+        <StackPanel VerticalAlignment="Bottom"   DataContext="{Binding PluginDictionary[模块管理].BindingCommands.ChildActions[4].ChildActions}"  HorizontalAlignment="Right" Margin="0,0,20,0" Orientation="Horizontal">
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
 				<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
 					<Button Style="{DynamicResource miniButton}" DataContext="{Binding [3]}" />  	
 		</StackPanel>
-    	<ListBox x:Name="dataListBox" Margin="8,40.25,8,20" SelectedItem="{Binding SelectedDataCollection}" MouseMove="ListBox_MouseMove_1" DataContext="{Binding PluginDictionary[数据管理]}" ItemsSource="{Binding DataCollections}" ItemTemplate="{DynamicResource DataTemplate1}" Grid.Column="1">
+        <ListBox x:Name="dataListBox" Margin="8,11,8,20" ToolTip="当前加载的所有数据，可在此进行管理" SelectedItem="{Binding SelectedDataCollection}" MouseMove="ListBox_MouseMove_1" DataContext="{Binding PluginDictionary[数据管理]}" ItemsSource="{Binding DataCollections}" ItemTemplate="{DynamicResource DataTemplate1}" Grid.Column="1">
     		<ListBox.Resources>
     			<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding PluginDictionary[数据管理].Commands[2].ChildActions}"/>
 
@@ -140,8 +139,7 @@
 
     		</ListBox.ContextMenu>
     	</ListBox>
-    	<Button Margin="0.764,11.36,0,0"   Command="{Binding}" DataContext="{Binding Commands[0]}" VerticalAlignment="Top" FontSize="13.333" HorizontalAlignment="Left" Grid.Column="1"><Run Language="zh-cn" Text="数据视图"/></Button>
-    	<StackPanel VerticalAlignment="Bottom"  DataContext="{Binding PluginDictionary[数据管理].Commands[2].ChildActions}" HorizontalAlignment="Right" Margin="0,0,16.764,0" Orientation="Horizontal" Grid.Column="1">
+        <StackPanel VerticalAlignment="Bottom"  DataContext="{Binding PluginDictionary[数据管理].Commands[2].ChildActions}" HorizontalAlignment="Right" Margin="0,0,16.764,0" Orientation="Horizontal" Grid.Column="1">
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
