--- a/Hawk.ETL.Controls/SmartETLUI.xaml
+++ b/Hawk.ETL.Controls/SmartETLUI.xaml
@@ -92,7 +92,7 @@
      <Grid Grid.Column="1" Grid.RowSpan="2">
      	<Grid.RowDefinitions>
      		<RowDefinition Height="*"/>
-     		<RowDefinition Height="17"/>
+     		<RowDefinition Height="25"/>
      				<RowDefinition Height="30"/>   	
 		</Grid.RowDefinitions>
      	<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="2">
@@ -102,10 +102,10 @@
      	<Grid Grid.Row="1">
      		<Border BorderBrush="Black" BorderThickness="1" Background="#FF2D2D2D"/>
      		<StackPanel HorizontalAlignment="Left" Margin="2.25,-0.24,0,0" Orientation="Horizontal" d:LayoutOverrides="Height">
-     			<TextBlock TextWrapping="Wrap" Text="模块:" d:LayoutOverrides="Width" Margin="5,0,10,0"/>
-     			<TextBlock TextWrapping="Wrap" Text="{Binding ETLMount}" d:LayoutOverrides="Width"/>
-     			<TextBlock TextWrapping="Wrap" Text="/" d:LayoutOverrides="Width"/>
-     			<TextBlock TextWrapping="Wrap" Text="{Binding AllETLMount}" d:LayoutOverrides="Width"/>
+     			<TextBlock TextWrapping="Wrap" Text="模块:" d:LayoutOverrides="Width" Margin="5,0,10,0" VerticalAlignment="Center"/>
+     			<TextBox Width="25" TextWrapping="Wrap" Text="{Binding ETLMount}" d:LayoutOverrides="Width" VerticalAlignment="Center"/>
+     			<TextBlock TextWrapping="Wrap" Text="/" d:LayoutOverrides="Width" VerticalAlignment="Center"/>
+     			<TextBlock TextWrapping="Wrap" Text="{Binding AllETLMount}" d:LayoutOverrides="Width" VerticalAlignment="Center"/>
      		</StackPanel>
      		<ScrollBar SmallChange="1" Value="{Binding ETLMount}" Maximum="{Binding AllETLMount}" Orientation="Horizontal" Margin="100,0,0,0" Background="#FF292929" BorderBrush="White"/>
      	</Grid>
