--- a/Hawk.ETL.Controls/SmartETLUI.xaml
+++ b/Hawk.ETL.Controls/SmartETLUI.xaml
@@ -93,26 +93,28 @@
      	<Grid.RowDefinitions>
      		<RowDefinition Height="*"/>
      		<RowDefinition Height="25"/>
-     				<RowDefinition Height="30"/>   	
+     				<RowDefinition Height="45"/>   	
 		</Grid.RowDefinitions>
      	<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="2">
-     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding Commands5[1]}" Width="30" Height="30" />
+     		<Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands5[4]}" Width="35" Height="35" Margin="0,5,10,5" />
+			<Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands5[5]}" Width="35" Height="35" Margin="0,5,10,5" />
+     		<Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands5[1]}" Width="35" Height="35" />
      		<CheckBox Content="调试详情" IsChecked="{Binding DisplayDetail}" VerticalAlignment="Center"  />
      	</StackPanel>
      	<Grid Grid.Row="1">
      		<Border BorderBrush="Black" BorderThickness="1" Background="#FF2D2D2D"/>
-     		<StackPanel HorizontalAlignment="Left" Margin="2.25,-0.24,0,0" Orientation="Horizontal" d:LayoutOverrides="Height">
+     		<StackPanel HorizontalAlignment="Left" Margin="2.25,0,0,0" Orientation="Horizontal" d:LayoutOverrides="Height">
      			<TextBlock TextWrapping="Wrap" Text="模块:" d:LayoutOverrides="Width" Margin="5,0,10,0" VerticalAlignment="Center"/>
-     			<TextBox Width="25" TextWrapping="Wrap" Text="{Binding ETLMount}" d:LayoutOverrides="Width" VerticalAlignment="Center"/>
+     			<TextBox Width="50" TextWrapping="Wrap" Text="{Binding ETLMount}" VerticalAlignment="Center"/>
      			<TextBlock TextWrapping="Wrap" Text="/" d:LayoutOverrides="Width" VerticalAlignment="Center"/>
      			<TextBlock TextWrapping="Wrap" Text="{Binding AllETLMount}" d:LayoutOverrides="Width" VerticalAlignment="Center"/>
      		</StackPanel>
-     		<ScrollBar SmallChange="1" Value="{Binding ETLMount}" Maximum="{Binding AllETLMount}" Orientation="Horizontal" Margin="100,0,0,0" Background="#FF292929" BorderBrush="White"/>
+     		<ScrollBar SmallChange="1" Value="{Binding ETLMount}" Maximum="{Binding AllETLMount}" Orientation="Horizontal" Margin="131.334,4,0,4" Background="#FF292929" BorderBrush="White"/>
      	</Grid>
      	<StackPanel HorizontalAlignment="Center" Grid.Row="2" Orientation="Horizontal">
-     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding Commands5[2]}" Width="30" Height="30" Margin="15,0,0,0" />
-     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding Commands5[0]}" Width="30" Height="30" Margin="15,0,0,0" />
-     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding Commands5[3]}" Width="30" Height="30" Margin="15,0,0,0" />
+     		<Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands5[2]}" Width="35" Height="35" Margin="15,0,0,0" />
+     		<Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands5[0]}" Width="35" Height="35" Margin="15,0,0,0" />
+     		<Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands5[3]}" Width="35" Height="35" Margin="15,0,0,0" />
      	</StackPanel>
      	<ScrollViewer  x:FieldModifier="public" x:Name="ScrollViewer" Margin="8" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Disabled">
       
