--- a/Hawk.ETL.Controls/SmartCrawlerUI.xaml
+++ b/Hawk.ETL.Controls/SmartCrawlerUI.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-            
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:wpfPropertyGrid="clr-namespace:System.Windows.Controls.WpfPropertyGrid;assembly=System.Windows.Controls.WpfPropertyGrid"
+
              mc:Ignorable="d" 
              d:DesignHeight="386" d:DesignWidth="637">
     <Grid>
@@ -13,12 +14,25 @@
         </Grid.RowDefinitions>
 
         <Label Content="请键入URL:" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-        <TextBox Text="{Binding URL}" VerticalAlignment="Center" Margin="68,0,268,0"/>
+        <TextBox 	wpfPropertyGrid:TextBoxExtender.CommitOnEnter="True" Text="{Binding URL, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" VerticalAlignment="Center" Margin="68,0,268,0"/>
+
         <Button Margin="0,10,188,0" DataContext="{Binding Commands3[0]}"   Content="{Binding Text}" Command="{Binding}" Height="25" VerticalAlignment="Top" Width="50" HorizontalAlignment="Right"/>
-        <Button Margin="0,10,99,0" DataContext="{Binding Commands3[1]}"   Content="{Binding Text}" Command="{Binding}" Height="25" VerticalAlignment="Top" Width="50" HorizontalAlignment="Right"/>
-        <ScrollViewer Margin="0,4,5,0" Grid.Row="1" Grid.ColumnSpan="2">
-            <TextBlock Text="{Binding URLHTML}"    ScrollViewer.CanContentScroll="True" />
-        </ScrollViewer>
+        <Button Margin="0,10,99,0" DataContext="{Binding Commands2[2]}"   Content="{Binding Text}" Command="{Binding}" Height="25" VerticalAlignment="Top" Width="50" HorizontalAlignment="Right"/>
+        <Grid Margin="0,4,5,0" Grid.Row="1">
+        	<Grid.ColumnDefinitions>
+        		<ColumnDefinition Width="0.5*"/>
+        		<ColumnDefinition Width="0.5*"/>
+        	</Grid.ColumnDefinitions>
+        	<ScrollViewer>
+        		<TextBlock Text="{Binding URLHTML}"    ScrollViewer.CanContentScroll="True" TextWrapping="WrapWithOverflow" />
+        	</ScrollViewer>
+            <WindowsFormsHost  Name="windowsFormsHost"   Grid.Column="1" >
+                
+            </WindowsFormsHost>
+
+
+        </Grid>
+        <Button Margin="0,10.88,23.5,0" DataContext="{Binding Commands3[1]}"   Content="{Binding Text}" Command="{Binding}" Height="25" VerticalAlignment="Top" Width="50" HorizontalAlignment="Right"/>
 
 
     </Grid>
